<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.namelessmc</groupId>
	<artifactId>plugin</artifactId>
	<version>3.0.0-beta</version>
	<name>Nameless-Plugin</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>common</module>
		<module>bukkit-base</module>
		<module>spigot</module>
		<module>paper</module>
		<module>bungeecord</module>
		<module>sponge7</module>
		<module>velocity</module>
	</modules>

	<packaging>pom</packaging>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
					<compilerArguments>
						<Xmaxerrs>100</Xmaxerrs>
						<Xmaxwarns>100</Xmaxwarns>
					</compilerArguments>
					<annotationProcessorPaths>
						<path>
							<groupId>org.checkerframework</groupId>
							<artifactId>checker</artifactId>
							<version>3.21.4</version>
						</path>
					</annotationProcessorPaths>
					<annotationProcessors>
						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
						<annotationProcessor>org.checkerframework.checker.optional.OptionalChecker</annotationProcessor>
						<annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
						<annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
					</annotationProcessors>
					<compilerArgs>
					 	<arg>-Awarns</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>

					<relocations>
						<relocation>
							<pattern>com.github.mizosoft.methanol</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.methanol</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.namelessmc.java_api</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.nameless-api</shadedPattern>
						</relocation>
						<relocation>
							<pattern>net.kyori.event</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.event</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>xyz.derkades.derkutils</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.derkutils</shadedPattern>
						</relocation>
					</relocations>

					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.namelessmc</groupId>
				<artifactId>plugin-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.namelessmc</groupId>
				<artifactId>plugin-bukkit-base</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.namelessmc</groupId>
				<artifactId>java-api</artifactId>
				<version>canary</version>
			</dependency>
			<dependency>
				<groupId>xyz.derkades</groupId>
				<artifactId>Derkutils</artifactId>
				<version>spigot-1.13</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>event-api</artifactId>
				<version>5.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.bstats</groupId>
				<artifactId>bstats-base</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.bstats</groupId>
				<artifactId>bstats-bukkit</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.bstats</groupId>
				<artifactId>bstats-bungeecord</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.bstats</groupId>
				<artifactId>bstats-velocity</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-api</artifactId>
				<version>4.10.1</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-serializer-plain</artifactId>
				<version>4.10.1</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-minimessage</artifactId>
				<version>4.10.1</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-platform-bukkit</artifactId>
				<version>4.1.0</version>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-platform-bungeecord</artifactId>
				<version>4.1.0</version>
			</dependency>
			<dependency>
				<groupId>net.md-5</groupId>
				<artifactId>bungeecord-config</artifactId>
				<version>1.16-R0.4</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.36</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.9.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>23.0</version> <!-- This should match Nameless-Java-API (latest) -->
			</dependency>
			<dependency>
				<groupId>org.checkerframework</groupId>
				<artifactId>checker-qual</artifactId>
				<version>3.22.0</version>
			</dependency>
			<dependency>
				<groupId>com.velocitypowered</groupId>
				<artifactId>velocity-api</artifactId>
				<version>3.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.spigotmc</groupId>
				<artifactId>spigot-api</artifactId>
				<version>1.8.8-R0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.bukkit</groupId>
				<artifactId>bukkit</artifactId>
				<version>1.8.8-R0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>io.papermc.paper</groupId>
				<artifactId>paper-api</artifactId>
				<version>1.18.2-R0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>me.clip</groupId>
				<artifactId>placeholderapi</artifactId>
				<version>2.11.1</version>
			</dependency>
			<dependency>
				<groupId>com.github.MilkBowl</groupId>
				<artifactId>VaultAPI</artifactId>
				<version>1.7.1</version>
			</dependency>
			<dependency>
				<groupId>net.md-5</groupId>
				<artifactId>bungeecord-api</artifactId>
				<version>1.18-R0.1-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository> <!-- for net.kyori.event development builds -->
			<id>sonatype-oss-snapshots1</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

		<repository>
			<id>velocity</id>
			<url>https://nexus.velocitypowered.com/repository/maven-public/</url>
		</repository>

		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>

	</repositories>

</project>
